--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -1,32 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">Shop</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/products">Products</a>
-        </li>
-    </div>
-  </div>
-</nav>
+{% extends 'base.html' %}
+
+
+{% block content %}
   <div class="d-flex justify-content-evenly flex-wrap">
   {% for product in products %}
     <div class="card m-3" style="width: 18rem;">
       <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Title: {{product.title}}</h5>
+    <a href="/products/{{product.id}}"><h5 class="card-title">Title: {{product.title}}</h5></a>
     <p class="card-text">Price: {{product.Price}}AFN</p>
     <p class="card-text">Is published: {{product.is_published}}</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
@@ -34,6 +15,4 @@
   </div>
   {% endfor %}
 </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock content %}
