--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -2,15 +2,19 @@
 
 
 {% block content %}
+  <div class="d-flex justify-content-center">
+    <a class="btn btn-primary" href="{% url 'products:product_create' %}">Create Product</a>
+  </div>
   <div class="d-flex justify-content-evenly flex-wrap">
   {% for product in products %}
     <div class="card m-3" style="width: 18rem;">
       <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <a href="/products/{{product.id}}"><h5 class="card-title">Title: {{product.title}}</h5></a>
-    <p class="card-text">Price: {{product.Price}}AFN</p>
+    <a href="{% url 'products:product_get' product_id=product.id  %}"><h5 class="card-title">Title: {{product.title}}</h5></a>
+    <p class="card-text">Price: {{product.price}}AFN</p>
     <p class="card-text">Is published: {{product.is_published}}</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a href="{% url 'products:product_update' product_id=product.id %}" class="btn btn-primary">Update</a>
+    <a href="{% url 'products:product_delete' product_id=product.id %}" class="btn btn-danger">Delete</a>
   </div>
   </div>
   {% endfor %}
